Added another gauge with a slide control

--- a/gauge.html
+++ b/gauge.html
@@ -4,7 +4,25 @@
 	<meta charset='utf-8'>
 </head>
 <body>
-	<svg id='palette' width='300' height='160' />
+	<div id='gauge1'>
+		<svg id='palette' width='300' height='160' />
+	</div>
+	<div id='gauge2'></div>
+	<style>
+		#gauge1 {
+			text-align: center;
+		}
+		
+		#gauge2 {
+			text-align: center;
+		}
+		
+		#slider {
+			display: block;
+			margin: 0 auto;
+		}
+	</style>
 	<script src='gauge.js'></script>
+	<script src='gauge2.js'></script>
 </body>
 </html>
