Fixed some utility function bugs, add somre util functions, and built some gauges using the utility functions

--- a/gauge.html
+++ b/gauge.html
@@ -9,6 +9,9 @@
 	</div>
 	<div id='gauge2' class='gauge'></div>
 	<div id='gauge3' class='gauge'></div>
+	<div id='gauge4' class='gauge'></div>
+	<div id='gauge5' class='gauge'></div>
+
 	<style>
 		.gauge { text-align: center; }
 
