--- a/gauge.html
+++ b/gauge.html
@@ -11,6 +11,7 @@
 	<div id='gauge3' class='gauge'></div>
 	<div id='gauge4' class='gauge'></div>
 	<div id='gauge5' class='gauge'></div>
+	<div id='gauge6' class='gauge'></div>
 
 	<style>
 		.gauge { text-align: center; }
