Gauge1 now uses the utils

--- a/gauge.html
+++ b/gauge.html
@@ -4,9 +4,7 @@
 	<meta charset='utf-8'>
 </head>
 <body>
-	<div id='gauge1' class='gauge'>
-		<svg id='palette' width='300' height='160' />
-	</div>
+	<div id='gauge1' class='gauge'></div>
 	<div id='gauge2' class='gauge'></div>
 	<div id='gauge3' class='gauge'></div>
 	<div id='gauge4' class='gauge'></div>
