--- a/gauge.html
+++ b/gauge.html
@@ -10,6 +10,7 @@
 	<div id='gauge4' class='gauge'></div>
 	<div id='gauge5' class='gauge'></div>
 	<div id='gauge6' class='gauge'></div>
+	<div id='gauge7' class='gauge'></div>
 
 	<style>
 		.gauge { text-align: center; }
